--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,53 @@
-/*  your css code here. If applicable */
+body{
+    background-color: rgb(204, 204, 204);
+}
+
+h1{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+#div1{
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 10px;
+}
+
+h2{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+li{
+    list-style-type: none
+    
+}
+
+#div2{
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0px 10vw;
+}
+.player_one{
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+}
+.player_two{
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+}
+
+h3{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
